// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderChangelog handles no previous content 1`] = `
"# Change Log - foo

This log was last generated on Thu, 22 Aug 2019 21:20:40 GMT and should not be manually modified.

<!-- Start content -->

## 1.2.3

Thu, 22 Aug 2019 21:20:40 GMT

### Minor changes

- Awesome change (user1@example.com)
- Boring change (user2@example.com)

### Patches

- Fix (user1@example.com)
- stuff (user2@example.com)
"
`;

exports[`renderChangelog keeps previous content if no marker or h2 is found 1`] = `
"# Change Log - foo

This log was last generated on Thu, 22 Aug 2019 21:20:40 GMT and should not be manually modified.

<!-- Start content -->

## 1.2.3

Thu, 22 Aug 2019 21:20:40 GMT

### Minor changes

- Awesome change (user1@example.com)
- Boring change (user2@example.com)

### Patches

- Fix (user1@example.com)
- stuff (user2@example.com)

# Change Log - foo

This log was last generated on Wed, 21 Aug 2019 21:20:40 GMT and should not be manually modified.
"
`;

exports[`renderChangelog merges default and custom renderers 1`] = `
"# Change Log - foo

This log was last generated on Thu, 22 Aug 2019 21:20:40 GMT and should not be manually modified.

<!-- Start content -->

## 1.2.3
Thu, 22 Aug 2019 21:20:40 GMT
[Compare changes](http://real-github-compare-link)

### Minor changes

- Awesome change (user1@example.com, PR #123)
- Boring change (user2@example.com, PR #123)

### Patches

- Fix (user1@example.com, PR #123)
- stuff (user2@example.com, PR #123)

## 1.2.0

(content here)
"
`;

exports[`renderChangelog merges with previous content using h2 1`] = `
"# Change Log - foo

This log was last generated on Thu, 22 Aug 2019 21:20:40 GMT and should not be manually modified.

<!-- Start content -->

## 1.2.3

Thu, 22 Aug 2019 21:20:40 GMT

### Minor changes

- Awesome change (user1@example.com)
- Boring change (user2@example.com)

### Patches

- Fix (user1@example.com)
- stuff (user2@example.com)

## 1.2.0

(content here)
"
`;

exports[`renderChangelog merges with previous content using marker 1`] = `
"# Change Log - foo

This log was last generated on Thu, 22 Aug 2019 21:20:40 GMT and should not be manually modified.

<!-- Start content -->

## 1.2.3

Thu, 22 Aug 2019 21:20:40 GMT

### Minor changes

- Awesome change (user1@example.com)
- Boring change (user2@example.com)

### Patches

- Fix (user1@example.com)
- stuff (user2@example.com)

## 1.2.0

(content here)
"
`;

exports[`renderChangelog uses full custom renderer 1`] = `
"# Change Log - foo

This log was last generated on Thu, 22 Aug 2019 21:20:40 GMT and should not be manually modified.

<!-- Start content -->

## 1.2.3

no notes for you

## 1.2.0

(content here)
"
`;
